updated code for auth a bit more and now testing automatic refreshing over time mechanisms
